--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,16 @@ cmake_policy(VERSION 3.14.6)
 
 project(libnv-portable VERSION 1.0.0 DESCRIPTION "A cross-platform userspace version of libnv, ported from FreeBSD")
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+
+find_package(Atf-C)
+if(NOT Atf-C_FOUND)
+    message("ATF not found; will not build ATF tests")
+    set(TEST_ATF FALSE)
+else()
+    set(TEST_ATF TRUE)
+endif()
+
 # Set output directory
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY bin)
 
@@ -40,25 +50,31 @@ if(CMAKE_SYSTEM_NAME MATCHES ".*Linux")
     target_link_libraries(nvp bsd)
 endif()
 
-function(build_test target)
-    add_executable(${target} tests/${target}.c)
-    target_include_directories(${target} PRIVATE include)
-    target_link_directories(${target} PRIVATE bin)
-    target_link_libraries(${target} nvp)
-    if(LINUX)
-        target_link_libraries(${target} bsd)
-    endif()
+function(build_test target is_atf)
+    if (NOT (is_atf AND NOT TEST_ATF))
+        add_executable(${target} tests/${target}.c)
+        target_include_directories(${target} PRIVATE include)
+        target_link_directories(${target} PRIVATE bin)
+        target_link_libraries(${target} nvp)
+        if(LINUX)
+            target_link_libraries(${target} bsd)
+        endif()
+        if(is_atf)
+            target_link_libraries(${target} Atf-C::Atf-C)
+        endif()
     #add_custom_command(TARGET ${target} POST_BUILD COMMAND ./bin/test/${target})
+    endif()
 endfunction()
 
 # If tests are enabled, make tests
 if(TEST)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin/test)
 
-    build_test(nvlist_add_test)
-    build_test(nvlist_append_test)
-    build_test(nvlist_exists_test)
-    build_test(nvlist_free_test)
-    build_test(nvlist_get_test)
-    build_test(nvlist_move_test)
+    build_test(nvlist_add_test FALSE)
+    build_test(nvlist_append_test FALSE)
+    build_test(nvlist_exists_test FALSE)
+    build_test(nvlist_free_test FALSE)
+    build_test(nvlist_get_test FALSE)
+    build_test(nvlist_move_test FALSE)
+    build_test(nvlist_send_recv_test TRUE)
 endif()
